syntax = "proto3";

package scrayosnet.passage.adapter;

import "adapter/adapter.proto";

service Discovery {
    rpc GetTargets(TargetRequest) returns (TargetsResponse);
}

message TargetRequest {
    Address client_address = 1;
    Address server_address = 2;
    uint64 protocol = 3;
    string username = 4;
    string user_id = 5;
}

message TargetsResponse {
    repeated Target targets = 1;
}
